// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Card > should render with default styles 1`] = `
<div>
  <div
    class="_base_4c79e6 _giga_4c79e6"
  />
</div>
`;

exports[`Card > should render with giga spacing styles 1`] = `
<div>
  <div
    class="_base_4c79e6 _giga_4c79e6"
  />
</div>
`;

exports[`Card > should render with mega spacing styles 1`] = `
<div>
  <div
    class="_base_4c79e6 _mega_4c79e6"
  />
</div>
`;
